objects/Delegate_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate</label>
        <referenceTo>Delegate__c</referenceTo>
        <relationshipLabel>Delegate Attendances</relationshipLabel>
        <relationshipName>Delegate_Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Delegate Attendances</relationshipLabel>
        <relationshipName>Delegate_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Delegate Attendance</label>
    <nameField>
        <displayFormat>A{0}</displayFormat>
        <label>Attendance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegate Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>